--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=product-service
 
-spring.data.mongodb.uri=mongodb://root:password@mongodb:27017/product_service
+spring.data.mongodb.uri=mongodb://root:password@localhost:27017/product_service?authSource=admin
