--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -3,5 +3,13 @@ spring.application.name=order-service
 spring.datasource.url=jdbc:mysql://localhost:3306/order_service
 spring.datasource.username=root
 spring.datasource.password=mysql
+
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.flyway.enabled=true
+spring.flyway.url=jdbc:mysql://localhost:3306/order_service
+spring.flyway.user=root
+spring.flyway.password=mysql
+
 server.port=8081
